pyhts/static/pyhts/css/pyhts.css
#wrapper {
  width: 100%;
}
#page-wrapper {
    padding: 0 15px 20px 15px;
  min-height: 600px;
  background-color: white;
    margin: 0;
}
@media (min-width: 768px) {
  #page-wrapper {
    position: inherit;
    padding: 0 30px 20px 30px;
    border-left: 1px solid #e7e7e7;
  }
    .navbar-nav > li {
        float: none;
    }
}
.powered-by {
    text-align: center;
    color: #ccc;
    padding: 10px 0;
}
.navbar-static-top {
    margin-bottom: 0;
}
.navbar-top-links {
    margin-right: 0;
}
.navbar-top-links li {
  display: inline-block;
}
@media (min-width: 768px) {
    .navbar-top-links li:last-child {
        margin-right: 15px;
    }
}
.navbar-top-links li a {
  padding: 15px;
  min-height: 50px;
}
.navbar-top-links .dropdown-menu li {
  display: block;
}
.navbar-top-links .dropdown-menu li:last-child {
  margin-right: 0;
}
.navbar-top-links .dropdown-menu li a {
  padding: 3px 20px;
  min-height: 0;
}
@media (max-width: 767px) {
    .navbar-default li {
        width: 100%;
    }
}
/** Breadcrumbs **/
.breadcrumb {
    font-size: 0.8em;
    margin: 0;
    padding: 8px 0;
}
/** Datatables should use fontawesome sort icons **/
table.dataTable thead .sorting,
table.dataTable thead .sorting_asc,
table.dataTable thead .sorting_desc,
table.dataTable thead .sorting_asc_disabled,
table.dataTable thead .sorting_desc_disabled {
  background: transparent;
}
table.dataTable thead .sorting_asc:after {
  content: "\f0de";
  float: right;
  font-family: fontawesome;
}
table.dataTable thead .sorting_desc:after {
  content: "\f0dd";
  float: right;
  font-family: fontawesome;
}
table.dataTable thead .sorting:after {
  content: "\f0dc";
  float: right;
  font-family: fontawesome;
  color: rgba(50, 50, 50, 0.5);
}
@media (min-width: 768px) {
    .jumbotron {
        border-radius: 6px;
    }
}
.fa-jumbo {
  font-size: 126px;
  margin-top: 20px;
}
@media (max-width: 500px) {
    .fa-jumbo {font-size:90px;}
}
.tab-content {
    border: 1px solid #ddd; border-top:0;
    padding:10px;position:relative;border-radius:0 0 5px 5px
}
.messages > div:first-child {
  margin-top:30px;
}
.messages > div:last-child {
    margin-bottom:0;
}
.page-header {
    margin: 20px 0;
}
a[aria-expanded=true] .fa-chevron-up {
   display: none;
}
a[aria-expanded=false] .fa-chevron-down {
   display: none;
}
.btn-sidebar {
  width:100%;
  max-width: 250px;
  margin-bottom: 10px;
}
.btn-sidebar-nomgn {
    margin-bottom: 0;
}
#hts-move-selection button {
    width:25%;
}
.dropdown-menu .pull-right.fa {
    margin-right: -15px;
}
@media (min-width:767px) {
    .navbar-top-links .dropdown:hover .dropdown-menu {
        display: block;
    }
}

  #selectable-wells .ui-selecting { background: #FECA40; }
  #selectable-wells .ui-selected { background: #F39814; color: white; }
  .welllist { list-style-type: none;
      margin: 0;
      padding: 0; }
  #well-all {-webkit-touch-callout: none;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: none;
-ms-user-select: none;
user-select: none;}

  #hts-plate-panel {min-width:500px;}
  #hts-plate-dropdown {display: inline-block;}
  #selectable-well-rows {width:4%; float: left; clear:left; }
  .welllist li { margin: 0; padding: 0 0 4% 0; float: left; width: 4%;
      height: 0; cursor: default; text-align: center; font-size:1em;
      border-radius: 50%; }
  @media (min-width: 992px) {
      .welllist li {font-size:125%}
  }
  @media (min-width: 1200px) {
      .welllist li {font-size:150%}
  }
  #selectable-well-rows li {width: 100%; height:0; padding-bottom:100%;
      border:1px solid transparent; }

 .ui-selectable-helper { display:none }

  .scrollable-menu {
    height: auto;
    max-height: 400px;
    overflow-x: hidden;
 }
#hts-next-1, #hts-next-2 {
    display: none;
    padding: 3px 12px;
}
.upload-drop-zone {
  height: 200px;
  border-width: 2px;
  margin-bottom: 20px;
}
.upload-drop-zone {
  color: #ccc;
  border-style: dashed;
  border-color: #ccc;
  line-height: 200px;
  text-align: center
}
.upload-drop-zone.drop {
    color: #222;
    border-color: #222;
}

.tt-query {
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
}
.tt-hint {
    color: #999;
}
.tt-menu {
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    padding: 4px 0;
}
.tt-suggestion {
    line-height: 24px;
    padding: 3px 20px;
}
.tt-suggestion:hover {
    background-color: #0097cf;
    color: #fff;
    cursor: pointer;
}
.tt-suggestion.tt-cursor {
    background-color: #0097cf;
    color: #fff;
}
.tt-suggestion p {
    margin: 0;
}

.hts-overview .hts-cell-line {
    background-color: #a1aec7;
}
.hts-overview .hts-drug {
    background-color: #ebccd1;
}
.hts-overview .hts-dose {
    background-color: #f7ecb5;
}
.hts-overview .hts-cell-line.hts-drug {
    background-color: #a6e1ec;
    background: repeating-linear-gradient(
  45deg,
  #a1aec7,
  #a1aec7 6px,
  #ebccd1 6px,
  #ebccd1 12px
    );
}
.hts-overview .hts-cell-line.hts-dose {
    background-color: #adadad;
    background: repeating-linear-gradient(
  45deg,
  #a1aec7,
  #a1aec7 6px,
  #f7ecb5 6px,
  #f7ecb5 12px
    );
}
.hts-overview .hts-drug.hts-dose {
    background-color: #f0e8ff;
    background: repeating-linear-gradient(
  45deg,
  #ebccd1,
  #ebccd1 6px,
  #f7ecb5 6px,
  #f7ecb5 12px
    );
}
.hts-overview .hts-cell-line.hts-drug.hts-dose {
    background: #000;
}
.welllist.well-legend {
    display: block;
    clear: left;
    line-height: 1em;
}
.welllist.well-legend li {
    display: block;
    width: 1.5em;
    padding-bottom: 1.5em;
    margin-right: 0.5em;
    margin-bottom: 0.5em;
}
#legend-overview,#legend-cell-lines,#legend-drugs,#legend-doses {
    display:none;
}
.hts-overview #legend-overview {
    display:block;
}
.hts-celllines #legend-cell-lines {
    display:block;
}
.hts-drugs #legend-drugs {
    display:block;
}
.hts-doses #legend-doses {
    display:block;
}
/* ... */

